--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <input type="color" name="base" value="#ffc600">
     </div>
 
-    <img src="http://unsplash.it/800/500?image=899">
+    <img src="https://images.pexels.com/photos/374870/pexels-photo-374870.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
     <script src="resources/js/index.js"></script>
 </body>
 </html>
